# docan

./: README.rst  README_ja.rst  pyproject.toml
.github/workflows/: main.yml
doc/: conf.py  index.rst
doc-ja/: conf.py  index.rst  overview.rst
doc-ja/commands/: index.rst  init.rst  lint.rst
docan/: cli.py
